--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "lint-staged": "^15.2.9",
     "postcss": "^8.4.41",
     "prettier": "^3.3.3",
+    "start-server-and-test": "^2.0.5",
     "tailwindcss": "^3.4.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
