--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/node": "^22.3.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/testing-library__jest-dom": "^5.14.9",
     "autoprefixer": "^10.4.20",
     "cypress": "^13.13.3",
     "eslint": "^8.57.0",
