--- a/.env.test
+++ b/.env.test
@@ -8,4 +8,4 @@ APP_URL=https://showcase.ythepaut.com/
 TIMEZONE=Europe/Paris
 DEFAULT_LOCALE=fr
 
-IMAGE_HOSTNAME_PATTERN=cdn.pixabay.com
+IMAGE_HOSTNAME_PATTERN=*.ythepaut.com
