--- a/package.json
+++ b/package.json
@@ -25,10 +25,9 @@
   },
   "homepage": "https://github.com/ythepaut/image-showcase#readme",
   "dependencies": {
+    "bigger-picture": "^1.1.17",
     "next": "^14.2.5",
     "next-intl": "^3.17.3",
-    "photoswipe": "^5.4.4",
-    "photoswipe-deep-zoom-plugin": "^1.1.2",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
@@ -40,7 +39,6 @@
     "@tsconfig/next": "^2.0.3",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.3.0",
-    "@types/photoswipe": "^4.1.6",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/testing-library__jest-dom": "^5.14.9",
