--- a/.env.sample
+++ b/.env.sample
@@ -3,7 +3,7 @@ ENVIRONMENT=production
 APP_NAME=Image Showcase
 APP_DESCRIPTION=Open source image gallery
 APP_KEYWORDS=image gallery, image showcase
-APP_URL=https://showcase.ythepaut.com/
+APP_URL=https://showcase.ythepaut.com
 
 TIMEZONE=Europe/Paris
 DEFAULT_LOCALE=fr
