feat(image carousel): add carousel, refactor image details
Refs: IS-15

--- a/.env.local
+++ b/.env.local
@@ -1,11 +1,11 @@
-ENVIRONMENT=production
+ENVIRONMENT=development
 
 APP_NAME=Image Showcase
 APP_DESCRIPTION=Open source image gallery
 APP_KEYWORDS=image gallery, image showcase
-APP_URL=https://showcase.ythepaut.com
+APP_URL=http://localhost:3000
 
-IMAGES_URL=http://showcase.ythepaut.com/assets/images.json
+IMAGES_URL=http://localhost:3000/assets/images.json
 
 TIMEZONE=Europe/Paris
 DEFAULT_LOCALE=fr
