--- a/.env.test
+++ b/.env.test
@@ -1,11 +1,14 @@
+NODE_ENV=test
 ENVIRONMENT=test
 
-APP_NAME=Image Showcase
+APP_NAME=TEST
 APP_DESCRIPTION=Open source image gallery
 APP_KEYWORDS=image gallery, image showcase
 APP_URL=https://showcase.ythepaut.com
 
+IMAGES_URL=http://localhost:3000/assets/images_test.json
+
 TIMEZONE=Europe/Paris
 DEFAULT_LOCALE=fr
 
-IMAGE_HOSTNAME_PATTERN=*.ythepaut.com
+IMAGE_HOSTNAME_PATTERN=placehold.co
