--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "next-intl": "^3.17.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.4.0",
