--- a/.env.test
+++ b/.env.test
@@ -6,7 +6,7 @@ APP_DESCRIPTION=Open source image gallery
 APP_KEYWORDS=image gallery, image showcase
 APP_URL=https://showcase.ythepaut.com
 
-IMAGES_URL=
+IMAGES_URL=http://localhost:3000/assets/images_test.json
 
 TIMEZONE=Europe/Paris
 DEFAULT_LOCALE=fr
