--- a/.env.sample
+++ b/.env.sample
@@ -9,3 +9,5 @@ IMAGES_URL=http://showcase.ythepaut.com/assets/images.json
 
 TIMEZONE=Europe/Paris
 DEFAULT_LOCALE=fr
+
+IMAGE_HOSTNAME_PATTERNS=localhost,*.ythepaut.com
