--- a/.env.test
+++ b/.env.test
@@ -10,3 +10,5 @@ IMAGES_URL=http://localhost:3000/assets/images_test.json
 
 TIMEZONE=Europe/Paris
 DEFAULT_LOCALE=fr
+
+IMAGE_HOSTNAME_PATTERNS=localhost,placehold.co
