--- a/.env.sample
+++ b/.env.sample
@@ -10,4 +10,4 @@ IMAGES_URL=http://showcase.ythepaut.com/assets/images.json
 TIMEZONE=Europe/Paris
 DEFAULT_LOCALE=fr
 
-IMAGE_HOSTNAME_PATTERNS=localhost,*.ythepaut.com
+IMAGE_HOSTNAME_PATTERNS=*.ythepaut.com
